# toshi-hazard-store

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  DEVELOPMENT.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg  test_1.json
.github/workflows/: dev.yml  release.yml
.llm/: log.jsonl
.opencode/plans/: dynamodb_removal_plan.md  dynamodb_removal_summary.md  dynamodb_removal_updated_plan.md  dynamodb_removal_verification.md
demo/: demo_info.md  demo_mmap.py  demo_mmap_2.py  demo_mmap_reader.py  demo_mmap_reader2.py
docs/: REFACTOR_PLAN.md  api.md  configuration.md  installation.md  usage.md
docs/api/: index.md
docs/assistant_logs/: THS_opencode-refactoring_session-2026-02-19.md
docs/cli/: aggregation_cli_workflow.md  hazard_dataset_overview.md  index.md  store_hazard_v4.md  ths_build_grid.md  ths_compat.md  ths_disagg_import.md  ths_ds_check.md  ths_ds_defrag.md  ths_ds_filter.md  ths_ds_sanity.md  ths_grid_build.md  ths_grid_sanity.md  ths_import.md  ths_r4_defrag.md  ths_r4_filter_dataset.md  ths_r4_import.md  ths_r4_migrate.md  ths_r4_query.md  ths_r4_sanity.md  ths_rlz_import.md  ths_rlz_sanity.md  usage.md
docs/datasets/: error.md
docs/domain_model/: disaggregation_models.md  gridded_hazard_models.md  hazard_metadata.md  openquake_models.md
docs/migration/: 2024-06-27_dataset_build.md  arrow_sanity_testing.md
scripts/: aggregate.py  demo.py  nz_binned_demo.py  query_meta.py  query_rlz.py  store_hazard.py  store_hazard_v3.py  ths_cache.py  ths_r4_defrag.py  ths_r4_import.py  ths_r4_sanity.py  ths_testing.py
scripts/migration/: demo_thp_arrow_strategies.py
scripts/revision_4/: oq_config.py
tests/: conftest.py  test_aggregate_rlzs.py  test_attributes.py  test_get_hazard_curve_performance.py  test_gridded_hazard_model.py  test_pynamo_disagg_models.py  test_pynamo_models.py  test_pynamo_models_oq_meta.py  test_pynamo_models_oq_rlz.py  test_pynamo_models_v3.py  test_query.py  test_query_disaggs.py  test_query_hazard_agg_v3.py  test_query_hazard_agg_vs30_fix.py  test_query_hazard_caching.py  test_query_rlzs.py  test_query_rlzs_v3.py  test_query_rlzs_vs30_fix.py  test_site_specific_vs30.py  test_transform.py  test_utils.py
tests/gridded_hazard/: __init__.py  conftest.py  test_grid_analysis.py  test_gridded_hazard.py  test_gridded_poe.py  test_more_gridded_poe.py
tests/model/: conftest.py  test_hazard_grid_models.py  test_hazard_models.py  test_hazard_models_manager.py  test_hazard_models_manager_exceptions.py  test_hazard_models_pydantic.py
tests/model_revision_4/: conftest.py  test_extract_classical_hdf5.py
tests/openquake/: test_oq_import.py  test_transform.py
tests/oq_import/: conftest.py  test_extract_classical_hdf5.py  test_extract_disagg_hdf5.py  test_oq_config.py  test_oq_config_public_methods.py  test_registry_check.py  test_toshi_api_subtask.py
tests/query/: test_disagg_aggregate_query.py  test_gridded_hazard_query.py  test_hazard_curve_migration.py
tests/scripts/: test_store_hazard_v3.py  test_ths_agg_backup.py  test_ths_build_gridded.py  test_ths_compat.py  test_ths_disagg_import.py  test_ths_ds_check.py  test_ths_ds_defrag.py  test_ths_ds_filter.py  test_ths_ds_sanity.py  test_ths_grid_build.py  test_ths_grid_sanity.py  test_ths_import.py  test_ths_json_backup.py  test_ths_rlz_import.py  test_ths_rlz_sanity.py
toshi_hazard_store/: __init__.py  aggregate_rlzs.py  aggregate_rlzs_mp.py  config.py  curves.py  data_functions.py  export.py  export_v3.py  locations.py  model.py  multi_batch.py  query.py  query_v3.py  transform.py  utils.py
toshi_hazard_store/branch_combinator/: SLT_37_GRANULAR_RELEASE_1.py  SLT_37_GRANULAR_RELEASE_NB.py  SLT_37_GT.py  SLT_37_GT_VS400_gsim_DATA.py  (+4 more)
(+132 files in other folders)
